--- a/less/global.less
+++ b/less/global.less
@@ -16,6 +16,9 @@ h1, h2, h3, h4, h5 {
   font-family: 'Russo One', sans-serif;
   color: @header-font-color;
 }
+h1{
+  font-size: 4.2rem;
+}
 
 h2 {
   font-size: 3.2rem;
@@ -25,10 +28,12 @@ h3 {
   font-size: 2.8rem;
 }
 
-p {
+p, a {
   font-size: 1.6rem;
   line-height: 1.4;
+  font-weight: bold;
 }
+
 
 .container {
   max-width: 800px;
