--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,32 @@
 // Navigation code here
+.nav-bar {
+    display        : flex;
+    flex-direction : column;
+    justify-content: space-evenly;
+    align-items    : center;
+    height         : 10vh;
+    background     : #f4f4f4;
+
+    @media @mobile{
+        width: 100%;
+        background: darken(#f4f4f4, 10%);
+    }
+
+    nav {
+        width          : 40%;
+        height         : 40%;
+        display        : flex;
+        justify-content: space-evenly;
+        flex-direction : row;
+
+        @media @mobile{
+            width: 100%;
+            
+        }
+
+        a {
+            color: black;
+            text-decoration: none;
+        }
+    }
+}
