answered questions and added viewport

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -19,7 +19,7 @@
         justify-content: space-evenly;
         flex-direction : row;
 
-        @media @mobile{
+        @media @phone{
             width: 100%;
             
         }
