--- a/less/home-page.less
+++ b/less/home-page.less
@@ -55,13 +55,13 @@
     display: flex;
     justify-content: center;
 
-    @media @mobile{
+    @media @phone{
       flex-direction: column-reverse;
     }
 
     .walk-text {
       width: 50%;
-      @media @mobile{
+      @media @phone{
         width: 100%;
       }
 
@@ -77,7 +77,7 @@
         .btn-style(rgb(17,17,17),white);
         .flex-center();
 
-        @media @mobile{
+        @media @phone{
           width: 100%;
           height: 8vh;
         }
@@ -87,7 +87,7 @@
     .walk-img {
       width: 46%;
       margin-left: 4%;
-      @media @mobile{
+      @media @phone{
         width: 100%;
       }
       
